# visual-path-estimation

./: .gitmodules  CMakeLists.txt  README.md  download.sh  main.cpp  pch.h  utils.hpp
results/csgo/: estimates.txt  results.txt
results/dinoRing/: estimates.txt  results.txt
results/templeRing/: estimates.txt  results.txt
